[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -51.0
margin_top = -34.0
margin_right = 47.0
margin_bottom = 34.0

[node name="startButton" type="Button" parent="VBoxContainer"]
margin_right = 98.0
margin_bottom = 20.0
text = "Start"

[node name="optionsButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 98.0
margin_bottom = 44.0
text = "Options"

[node name="quitButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 98.0
margin_bottom = 68.0
text = "Quit"

[connection signal="pressed" from="VBoxContainer/startButton" to="." method="_on_startButton_pressed"]
[connection signal="pressed" from="VBoxContainer/optionsButton" to="." method="_on_optionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/quitButton" to="." method="_on_quitButton_pressed"]
